[gd_scene load_steps=3 format=3 uid="uid://cwaf57q1jy301"]

[ext_resource type="Script" path="res://scripts/options_menu/option_menu_template_manager.gd" id="1_88na3"]
[ext_resource type="Theme" uid="uid://bi5sl1kglohpl" path="res://assets/themes/light_blue_theme.tres" id="1_ixicm"]

[node name="OptionMenuTemplate" type="CanvasLayer"]
script = ExtResource("1_88na3")

[node name="FullWindow" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundPanel" type="Panel" parent="FullWindow"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.185
anchor_top = 0.3
anchor_right = 0.815
anchor_bottom = 0.65
theme = ExtResource("1_ixicm")

[node name="TitleLabel" type="Label" parent="FullWindow/BackgroundPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.25
theme_override_font_sizes/font_size = 50
text = "Title..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="FullWindow/BackgroundPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.25
anchor_right = 0.95
anchor_bottom = 0.95
theme_override_constants/separation = 20

[node name="CloseButton" type="Button" parent="FullWindow/BackgroundPanel/ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10
text = "Close"

[node name="BackgroundPanelContainer" type="PanelContainer" parent="FullWindow"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.185
anchor_top = 0.3
anchor_right = 0.815
anchor_bottom = 0.65
theme = ExtResource("1_ixicm")

[node name="TitleLabel" type="Label" parent="FullWindow/BackgroundPanelContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 50
text = "Title..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="FullWindow/BackgroundPanelContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Close"
